--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "gulp",
+    "precommit": "npm run format && npm run lint-fix",
+    "lint": "eslint ./",
+    "lint-fix": "eslint ./ --fix",
+    "format": "npx prettier --write ./",
     "prepare": "npx husky-init && husky install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,19 +29,14 @@
     "@commitlint/config-conventional": "^17.4.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-connect": "^5.7.0",
     "husky": "^8.0.0",
-    "lint-staged": "^13.1.0",
-    "prettier": "2.8.2"
-  },
-  "lint-staged": {
-    "**/*.js": [
-      "npx prettier --write",
-      "npx eslint --fix"
-    ],
-    "**/*.{html, css}": [
-      "npx prettier --write"
-    ]
+    "prettier": "^2.8.2"
   }
 }
