--- a/package.json
+++ b/package.json
@@ -35,7 +35,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-require-modules": "^1.1.4",
+    "gulp-sourcemaps": "^3.0.0",
     "husky": "^8.0.0",
     "prettier": "^2.8.2"
   }
