--- a/package.json
+++ b/package.json
@@ -57,5 +57,7 @@
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "uuid": "^9.0.0"
+  }
 }
