feat: implementacion de sass y con nueva logica en los componentes

--- a/.gitignore
+++ b/.gitignore
@@ -187,4 +187,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+## packaga node ##
+package-lock.json
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,node,visualstudiocode
