--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
+    "cssnano": "^5.1.15",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
@@ -48,11 +49,14 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-eslint": "^6.0.0",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
     "husky": "^8.0.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "sass": "^1.58.3",
     "standard": "^17.0.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
